# conan_test

./: .gitignore  README.md
dep_lib1/: CMakeLists.txt  conanfile.py
dep_lib1/cmake/config/: dep1-config.cmake.in
dep_lib1/cmake/module/: configuration.cmake  installation.cmake
dep_lib1/src/lib/: CMakeLists.txt
dep_lib1/src/lib/Adder/: Adder.h  CMakeLists.txt
dep_lib1/src/lib/dep1/: CMakeLists.txt
dep_lib1/src/lib/dep1/Adder/: Adder.cpp  Adder.h  CMakeLists.txt
dep_lib2/: CMakeLists.txt  conanfile.py
dep_lib2/cmake/config/: dep2-config.cmake.in
dep_lib2/cmake/module/: configuration.cmake  installation.cmake
dep_lib2/src/lib/: CMakeLists.txt
dep_lib2/src/lib/dep2/: CMakeLists.txt
dep_lib2/src/lib/dep2/AdderD/: AdderD.cpp  AdderD.h  CMakeLists.txt
dep_lib2/src/lib/dep2/Multiplier/: CMakeLists.txt  Multiplier.cpp  Multiplier.h
my_project/cmake/config/: my-project-config.cmake.in
my_project/cmake/module/: configuration.cmake  installation.cmake
my_project/src/app/exmpl/: CMakeLists.txt  main.cpp
my_project/src/lib/proj/: CMakeLists.txt
my_project/src/lib/proj/Calculator/: CMakeLists.txt  Calculator.cpp  Calculator.h
project/: CMakeLists.txt  b_conanfile.py  conanfile.py
project/cmake/config/: calc-project-config.cmake.in
project/cmake/module/: configuration.cmake  installation.cmake
project/src/app/: CMakeLists.txt
project/src/app/exmpl/: CMakeLists.txt  main.cpp
project/src/lib/calc/Calculator/: CMakeLists.txt  Calculator.cpp  Calculator.h
